Invisible font bug fix attempt.

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   margin: 0;
   transition: filter 0.05s, color 0.05s, border 0.10s, background-color 0.10s;
   //font-family: Gotham, Arial, Helvetica, sans-serif;
-  font-family: Gotham-Light, Gotham, GothamMedium, GothamBook, Arial, Helvetica, sans-serif;
+  font-family: Spotifont, system, -apple-system, BlinkMacSystemFont, sans-serif;
   color: white;
   user-select: none;
   animation: popup 0.15s linear forwards;
@@ -19,7 +19,6 @@ html, body {
   opacity: 1;
   /* Temporary solution */
   overflow-x: hidden; 
-  font-family: Gotham-Light, Gotham, GothamMedium, GothamBook, Arial, Helvetica, sans-serif;
 }
 
 #root {
@@ -51,6 +50,11 @@ html, body {
 @font-face {
   font-family: Gotham;
   src: url("./assets/fonts/GothamMedium_1.ttf");
+}
+
+@font-face {
+  font-family: Spotifont;
+  src: url("./assets/fonts/Spotifont.ttf");
 }
 
 @font-face {
